# INF-4102A

./: Find_motive.cpp  README.md
cartesian_vector_param/: vector.cpp  vector.hh
cartesian_vector_variable/: CMakeLists.txt  main.cc  vector.cpp  vector.hh
find_motive/: CMakeLists.txt
is_prime_prog/: CMakeLists.txt  main.cpp
